try fix for image scrollbar

--- a/view/css/estilos.css
+++ b/view/css/estilos.css
@@ -34,6 +34,7 @@ body {
 
 .form-register {
     max-width: 400px;
+    overflow-x: auto;
     background-color: #ffba26;
     padding: 20px 40px;
     margin: auto;
@@ -43,7 +44,6 @@ body {
     font-size: 19px;
     color: black;
     box-shadow: 7px 13px 37px #161615;
-
 }
 
 .form-register h4 {
